<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_background"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:src="@drawable/white_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/deliver_favourite_food"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="38dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/signup"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/signup_name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="22dp"
                    android:background="@drawable/app_custom_text_field"
                    android:drawableStart="@drawable/person_icon"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/name_hint"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:textColorHint="@color/black"
                    android:textSize="12sp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <EditText
                    android:id="@+id/signup_email_txt"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/app_custom_text_field"
                    android:drawableStart="@drawable/email_icon"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:textColorHint="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/signup_name_txt"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/signup_name_txt"
                    app:layout_constraintTop_toBottomOf="@+id/signup_name_txt" />

                <EditText
                    android:id="@+id/signup_password_txt"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/app_custom_text_field"
                    android:drawableStart="@drawable/password_icon"
                    android:drawableEnd="@drawable/eye_icon"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColorHint="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/signup_email_txt"
                    app:layout_constraintStart_toStartOf="@+id/signup_email_txt"
                    app:layout_constraintTop_toBottomOf="@+id/signup_email_txt" />


                <Button
                    android:id="@+id/signup_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="55dp"
                    android:background="@drawable/app_custom_button"
                    android:text="@string/create_account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/signup_email_txt"
                    app:layout_constraintStart_toStartOf="@id/signup_email_txt"
                    app:layout_constraintTop_toBottomOf="@+id/signup_password_txt" />

                <ProgressBar
                    android:id="@+id/signup_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/primary"
                    android:indeterminateTintMode="src_in"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/signup_btn"
                    app:layout_constraintEnd_toEndOf="@id/signup_btn"
                    app:layout_constraintStart_toStartOf="@id/signup_btn"
                    app:layout_constraintTop_toTopOf="@id/signup_btn" />

                <TextView
                    android:id="@+id/txt_guest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/continue_as_guest"
                    android:textColor="@color/primary"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup_btn" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>